--- a/Defenduino.vcxproj
+++ b/Defenduino.vcxproj
@@ -73,7 +73,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\Defenduino;$(ProjectDir)..\..\Arduino\libraries\Arduboy2\src;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\libraries\EEPROM\src;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\libraries;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\libraries;$(ProjectDir)..\..\Arduino\libraries;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\cores\arduino;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\variants\leonardo;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\avr\include;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\avr\include\avr;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\lib\gcc\avr\4.8.1\include;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\lib\gcc\avr\4.9.3\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\Defenduino;C:\Users\Alex\Documents\Arduino\libraries\Arduboy2\src;$(ProjectDir)..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\libraries\EEPROM\src;$(ProjectDir)..\..\..\Program Files (x86)\arduino-1.8.5\libraries;$(ProjectDir)..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\libraries;C:\Users\Alex\Documents\Arduino\libraries;$(ProjectDir)..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\cores\arduino;$(ProjectDir)..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\variants\leonardo;$(ProjectDir)..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\avr\include;$(ProjectDir)..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\avr\include\avr;$(ProjectDir)..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\lib\gcc\avr\4.8.1\include;$(ProjectDir)..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\lib\gcc\avr\4.9.3\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>$(ProjectDir)__vm\.Defenduino.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <WholeProgramOptimization>false</WholeProgramOptimization>
       <PreprocessorDefinitions>__AVR_ATmega32u4__;__AVR_ATmega32U4__;F_CPU=16000000L;ARDUINO=10805;ARDUINO_AVR_LEONARDO;ARDUINO_ARCH_AVR;USB_VID=0x2341;USB_PID=0x8036;__cplusplus=201103L;_VMICRO_INTELLISENSE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -114,6 +114,8 @@
     <ClInclude Include="GameObject.h">
       <FileType>CppCode</FileType>
     </ClInclude>
+    <ClInclude Include="GameState.h" />
+    <ClInclude Include="Globals.h" />
     <ClInclude Include="MenuState.h">
       <FileType>CppCode</FileType>
     </ClInclude>
@@ -132,6 +134,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="GameCamera.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="GameState.cpp" />
     <ClCompile Include="MenuState.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="State.cpp" />
