Rendering relative to camera.  Ship vertical movement.

--- a/Defenduino.vcxproj.filters
+++ b/Defenduino.vcxproj.filters
@@ -101,5 +101,8 @@
     <ClCompile Include="SpriteRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Vector2Int.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
