Landscape, scrolling wrapping camera

--- a/Defenduino.vcxproj.filters
+++ b/Defenduino.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="Vector2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Landscape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp">
@@ -103,6 +106,12 @@
     </ClCompile>
     <ClCompile Include="Vector2Int.h">
       <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Vector2Int.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Landscape.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
