--- a/Defenduino.vcxproj
+++ b/Defenduino.vcxproj
@@ -117,10 +117,12 @@
     <ClInclude Include="GameState.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="Humanoid.h" />
+    <ClInclude Include="Lander.h" />
     <ClInclude Include="LandscapeSegment.h" />
     <ClInclude Include="MenuState.h">
       <FileType>CppCode</FileType>
     </ClInclude>
+    <ClInclude Include="MovingGameObject.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="PlayerShip.h" />
     <ClInclude Include="PlayerShot.h" />
@@ -144,8 +146,10 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="Humanoid.cpp" />
+    <ClCompile Include="Lander.cpp" />
     <ClCompile Include="LandscapeSegment.cpp" />
     <ClCompile Include="MenuState.cpp" />
+    <ClCompile Include="MovingGameObject.cpp" />
     <ClCompile Include="ObjectPool.cpp" />
     <ClCompile Include="PlayerShip.cpp" />
     <ClCompile Include="PlayerShot.cpp" />
