--- a/Defenduino.vcxproj
+++ b/Defenduino.vcxproj
@@ -123,6 +123,7 @@
       <FileType>CppCode</FileType>
     </ClInclude>
     <ClInclude Include="MovingGameObject.h" />
+    <ClInclude Include="Particles.h" />
     <ClInclude Include="PlayerShip.h" />
     <ClInclude Include="PlayerShot.h" />
     <ClInclude Include="Sprite.h" />
@@ -147,6 +148,7 @@
     <ClCompile Include="Landscape.cpp" />
     <ClCompile Include="MenuState.cpp" />
     <ClCompile Include="MovingGameObject.cpp" />
+    <ClCompile Include="Particles.cpp" />
     <ClCompile Include="PlayerShip.cpp" />
     <ClCompile Include="PlayerShot.cpp" />
     <ClCompile Include="Sprite.cpp" />
