--- a/Defenduino.vcxproj.filters
+++ b/Defenduino.vcxproj.filters
@@ -161,5 +161,8 @@
     <ClCompile Include="EnemyShot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Vector2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
