--- a/Defenduino.vcxproj
+++ b/Defenduino.vcxproj
@@ -112,6 +112,7 @@
     </ClInclude>
     <ClInclude Include="EnemyShot.h" />
     <ClInclude Include="Flaggable.h" />
+    <ClInclude Include="Font3x5.h" />
     <ClInclude Include="GameCamera.h" />
     <ClInclude Include="GameObject.h">
       <FileType>CppCode</FileType>
@@ -146,6 +147,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="EnemyShot.cpp" />
     <ClCompile Include="Flaggable.cpp" />
+    <ClCompile Include="Font3x5.cpp" />
     <ClCompile Include="GameCamera.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameOverState.cpp" />
