--- a/Defenduino.vcxproj.filters
+++ b/Defenduino.vcxproj.filters
@@ -84,6 +84,12 @@
     <ClInclude Include="Font3x5.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Bomber.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp">
@@ -150,6 +156,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Font3x5.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Bomber.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Mine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
