--- a/Defenduino.vcxproj
+++ b/Defenduino.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="State.h">
       <FileType>CppCode</FileType>
     </ClInclude>
+    <ClInclude Include="Swarmer.h" />
     <ClInclude Include="TextObject.h" />
     <ClInclude Include="Vector2.h" />
     <ClInclude Include="Vector2Byte.h" />
@@ -157,6 +158,7 @@
     <ClCompile Include="PlayerShip.cpp" />
     <ClCompile Include="PlayerShot.cpp" />
     <ClCompile Include="Pod.cpp" />
+    <ClCompile Include="Swarmer.cpp" />
     <ClCompile Include="TextObject.cpp" />
     <ClCompile Include="Vector2.cpp" />
     <ClCompile Include="Vector2Byte.cpp" />
