--- a/Defenduino.vcxproj.filters
+++ b/Defenduino.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="Swarmer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Baiter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameObject.cpp">
@@ -165,6 +168,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Swarmer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Baiter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
