--- a/Defenduino.vcxproj
+++ b/Defenduino.vcxproj
@@ -89,7 +89,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\Defenduino;$(ProjectDir)..\..\Arduino\libraries\Arduboy2\src;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\libraries\EEPROM\src;$(ProjectDir)..\..\Arduino\libraries\ArdBitmap\src;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\libraries;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\libraries;$(ProjectDir)..\..\Arduino\libraries;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\cores\arduino;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\variants\leonardo;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\avr\include;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\avr\include\avr;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\lib\gcc\avr\4.8.1\include;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\lib\gcc\avr\4.9.3\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\Defenduino;$(ProjectDir)..\..\Arduino\libraries\Arduboy2\src;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\libraries\EEPROM\src;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\libraries;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\libraries;$(ProjectDir)..\..\Arduino\libraries;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\cores\arduino;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\arduino\avr\variants\leonardo;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\avr\include;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\avr\include\avr;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\lib\gcc\avr\4.8.1\include;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\..\..\..\Program Files (x86)\arduino-1.8.5\hardware\tools\avr\lib\gcc\avr\4.9.3\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>$(ProjectDir)__vm\.Defenduino.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <IgnoreStandardIncludePath>false</IgnoreStandardIncludePath>
       <PreprocessorDefinitions>__AVR_ATmega32u4__;__AVR_ATmega32U4__;_DEBUG=1;_VMDEBUG=1;F_CPU=16000000L;ARDUINO=10805;ARDUINO_AVR_LEONARDO;ARDUINO_ARCH_AVR;USB_VID=0x2341;USB_PID=0x8036;__cplusplus=201103L;_VMICRO_INTELLISENSE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -107,6 +107,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ArdBitmap.h" />
     <ClInclude Include="Baiter.h" />
     <ClInclude Include="Bomber.h" />
     <ClInclude Include="Enemy.h" />
@@ -136,7 +137,7 @@
     </ClInclude>
     <ClInclude Include="Swarmer.h" />
     <ClInclude Include="TextObject.h" />
-    <ClInclude Include="WorldPos.h" />
+    <ClInclude Include="Vector2Int.h" />
     <ClInclude Include="Vector2Byte.h" />
     <ClInclude Include="__vm\.Defenduino.vsarduino.h" />
   </ItemGroup>
@@ -162,10 +163,8 @@
     <ClCompile Include="Pod.cpp" />
     <ClCompile Include="Swarmer.cpp" />
     <ClCompile Include="TextObject.cpp" />
-    <ClCompile Include="WorldPos.cpp" />
-    <ClCompile Include="Vector2Byte.cpp" />
     <ClCompile Include="Vector2Int.cpp" />
-    <ClCompile Include="Vector2Int.h" />
+    <ClCompile Include="Vector2Byte.cpp" />
   </ItemGroup>
   <PropertyGroup>
     <DebuggerFlavor>VisualMicroDebugger</DebuggerFlavor>
